dark mode issues fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -283,6 +283,9 @@ section{
 		background:$white;
 		margin-top: -50px;
 		color:$black;
+		p{
+			color:$black;
+		}
 	}
 
 
